# isoterm

./: Cargo.toml  Cross.toml  README.md  setup.sh
.github/workflows/: release.yml  rust-clippy.yml
src/: cli.rs  config.rs  error.rs  main.rs  provision.rs
src/provision/: atuin.rs  fish.rs  helix.rs  mod.rs  ripgrep.rs  starship.rs  zoxide.rs
templates/: activate.sh  config.fish  starship.toml
templates/atuin/: config.toml.template
templates/helix/: config.toml  languages.toml
tests/: logging.rs
