[package]
name = "isoterm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
cmd-exists = "0.1.2"
console = "0.16.1"
flate2 = "1.1.2"
futures-util = "0.3.31"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
xz2 = "0.1.7"
zip = "5.1.1"
