[package]
name = "isoterm"
version = "0.1.0-dev.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
cmd-exists = "0.1.2"
console = "0.16.1"
flate2 = "1.1.2"
futures-util = "0.3.31"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["stream", "blocking", "json"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
xz2 = "0.1.7"
pathdiff = "0.2.3"
regex = "1.10.5"
zip = "5.1.1"
futures = "0.3.31"
tokio-retry = "0.3.0"

[target.'aarch64-linux-android'.dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["json", "stream", "native-tls-vendored"]

[dev-dependencies]
wiremock = "0.6.0"

[[bin]]
name = "isoterm"
test = false
